# WatchTowerPlan

./: .gitignore  AGENTS.md  README.md  REVIEW.md  SUMMARY.md  decisions.md  foundations_review.md  mypy.ini  requirements.md
core/python/: .gitignore  AGENTS.md  README.md  pyproject.toml
core/python/src/: README.md
core/python/src/watchtower_core/: README.md  __init__.py  repo_local_bootstrap.py
core/python/src/watchtower_host/: README.md  __init__.py
core/python/tests/: README.md  __init__.py  cli_command_helpers.py  conftest.py  fixture_repo_support.py  pack_fixture_support.py
core/python/tests/fixtures/: README.md
core/python/tests/integration/: README.md  __init__.py  control_plane_artifact_helpers.py  fixture_repo_support.py  initiative_package_integration_cases.py  plan_workspace_integration_cases.py  test_acceptance_reconciliation.py  test_all_sync.py  test_all_validation.py  test_cli_dry_run_authoring_commands.py  test_cli_planning_query_commands.py  test_cli_sync_commands.py  test_control_plane_artifact_schema_contracts.py  test_control_plane_artifacts.py  test_control_plane_loader_and_foundation_contracts.py  test_coordination_index_sync.py  test_coordination_tracking_sync.py  test_copied_core_doctor.py  test_endstate_cutover_guards.py  test_evidence_bundle_helper.py  test_git_hook_installation.py  test_git_hygiene_commands.py  test_github_task_sync.py  test_guidance_promotion_integration.py  test_initiative_bootstrap.py  test_initiative_closeout.py  test_initiative_package_service.py  test_initiative_readiness.py  test_pack_bootstrap_commands.py  test_pack_export_commands.py  test_pack_externalization.py  test_plan_workspace_coordination.py  test_plan_workspace_indexes.py  test_plan_workspace_rendering.py  test_plan_workspace_service.py  test_planning_and_workflow_authoring_contracts.py  test_planning_scaffolds_service.py  test_project_scoped_initiatives.py  test_project_workspace_service.py  test_release_commands.py  (+12 more)
core/python/tests/unit/: README.md  __init__.py  conftest.py  control_plane_loader_test_support.py  document_semantics_fixtures.py  fixture_repo_support.py  pack_validation_helpers.py  route_query_handler_test_support.py  schema_store_test_support.py  synthetic_routing_support.py  test_acceptance_reconciliation.py  test_all_sync.py  test_all_validation.py  test_artifact_validation.py  test_benchmarking.py  test_cli.py  test_cli_benchmark_commands.py  test_cli_dry_run_authoring_commands.py  test_cli_git_commands.py  test_cli_knowledge_query_commands.py  test_cli_pack_commands.py  test_cli_planning_query_commands.py  test_cli_query_commands.py  test_cli_query_knowledge_commands.py  test_cli_route_and_path_commands.py  test_cli_startup_runtime_guards.py  test_cli_sync_commands.py  test_cli_telemetry_commands.py  test_cli_validate_commands.py  test_closeout_handlers.py  test_command_index_sync.py  test_command_semantics.py  test_compact_document_authoring.py  test_control_plane_loader.py  test_control_plane_loader_cache.py  test_control_plane_loader_pack_settings.py  test_control_plane_loader_surfaces.py  test_control_plane_model_exports.py  test_coordination_index_sync.py  test_coordination_tracking_sync.py  (+90 more)
core/python/tools/: README.md  dev_shell.sh  install_git_hooks.sh  setup_dev_env.sh  verify.sh
core/python/tools/git_hooks/: README.md  pre-push
plan/python/: AGENTS.md  README.md  pyproject.toml
plan/python/src/watchtower_plan/: README.md  __init__.py  artifact_index.py  export_cleanup.py  governed_documents.py  governing_documents.py  guidance_promotion.py  initiative_packages.py  integration.py  plan_workspace.py  planning_rendered_serialization.py  project_context.py  project_workspace.py  reference_resolution.py  reference_semantics.py  standards.py  task_companion_path_repair.py  task_lifecycle.py  task_lifecycle_support.py
plan/python/tests/: README.md  conftest.py
plan/python/tests/integration/: README.md  test_acceptance_reconciliation.py  test_all_sync.py  test_all_validation.py  test_cli_dry_run_authoring_commands.py  test_cli_planning_query_commands.py  test_cli_sync_commands.py  test_control_plane_artifact_schema_contracts.py  test_control_plane_loader_and_foundation_contracts.py  test_coordination_index_sync.py  test_coordination_tracking_sync.py  test_endstate_cutover_guards.py  test_evidence_bundle_helper.py  test_github_task_sync.py  test_guidance_promotion_integration.py  test_initiative_bootstrap.py  test_initiative_closeout.py  test_initiative_readiness.py  test_pack_externalization.py  test_plan_workspace_coordination.py  test_plan_workspace_indexes.py  test_plan_workspace_rendering.py  test_project_scoped_initiatives.py  test_project_workspace_service.py  (+8 more)
(+6240 files in other folders)
