[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "watchtower-core"
version = "0.1.0"
description = "Python helper and harness package for WatchTower core."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "jsonschema>=4.25.0,<5",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.10.0,<8",
  "mypy>=1.18.0,<2",
  "pip-audit>=2.9.0,<3",
  "pytest>=8.4.0,<9",
  "pytest-cov>=7.0.0,<8",
  "ruff>=0.13.0,<1",
  "types-PyYAML>=6.0.12,<7",
]

[project.scripts]
watchtower-core = "watchtower_core.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watchtower_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-q",
  "--maxfail=1",
]

[tool.coverage.run]
branch = true
source = ["watchtower_core"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "jsonschema",
  "yaml",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
