[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "watchtower-core"
version = "0.1.0"
description = "Python helper and harness package for WatchTower core."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "jsonschema>=4.25.0,<5",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.10.0,<8",
  "mypy>=1.18.0,<2",
  "pip-audit>=2.9.0,<3",
  "pytest>=8.4.0,<9",
  "pytest-cov>=7.0.0,<8",
  "ruff>=0.13.0,<1",
  "types-PyYAML>=6.0.12,<7",
  "watchtower-plan",
]

[tool.uv.sources]
watchtower-plan = { path = "../../plan/python", editable = true }

[project.scripts]
watchtower-core = "watchtower_host.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watchtower_core", "src/watchtower_host"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = [
  "-q",
  "--maxfail=1",
]

[tool.coverage.run]
branch = true
source = ["watchtower_core", "watchtower_host"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "jsonschema",
  "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "watchtower_core.adapters",
  "watchtower_core.adapters.*",
  "watchtower_core.control_plane",
  "watchtower_core.control_plane.*",
  "watchtower_core.documentation",
  "watchtower_core.documentation.*",
  "watchtower_core.validation",
  "watchtower_core.validation.*",
  "watchtower_core.query",
  "watchtower_core.query.*",
  "watchtower_core.sync",
  "watchtower_core.sync.*",
  "watchtower_core.rebuild",
  "watchtower_core.rebuild.*",
  "watchtower_core.routing",
  "watchtower_core.routing.*",
  "watchtower_core.workflow_execution",
  "watchtower_core.workflow_execution.*",
  "watchtower_core.evidence",
  "watchtower_core.evidence.*",
  "watchtower_core.utils",
  "watchtower_core.utils.*",
]
check_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
