[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "watchtower-plan"
version = "0.1.0"
description = "Plan-domain runtime package for WatchTowerPlan."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/watchtower_plan"]
